# AmethystDB

./: CMakeLists.txt  README.md  compile_commands.json  config.toml  core.c  test.c  test.py  test.ts
libs/: CMakeLists.txt
src/: config.h  trie.c  trie.h  types.c  types.h
trie/: CMakeLists.txt
trie/src/: trie.c
types/: CMakeLists.txt
types/src/: types.c  types.h
